--- a/auth2-resource-server/src/main/resources/application.yml
+++ b/auth2-resource-server/src/main/resources/application.yml
@@ -6,8 +6,8 @@ logging:
   level:
     root: INFO
     org.springframework.web: INFO
-    org.springframework.security: DEBUG
-    org.springframework.security.oauth2: DEBUG
+    org.springframework.security: INFO
+    org.springframework.security.oauth2: INFO
 #    org.springframework.boot.autoconfigure: DEBUG
 
 spring:
@@ -15,4 +15,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8888
+          issuer-uri: ${my-auth2.auth2-server.uri} # http://localhost:8888
+
+my-auth2:
+  auth2-server:
+    uri: https://forsrc-auth2-server.duckdns.org # http://localhost:8888
