--- a/auth2-server/src/main/resources/application.yml
+++ b/auth2-server/src/main/resources/application.yml
@@ -2,13 +2,21 @@
 
 server:
   port: 8888
-  
-  
+  forward-headers-strategy: NATIVE
 
 logging:
   level:
     root: INFO
     org.springframework.web: INFO
-    org.springframework.security: DEBUG
-    org.springframework.security.oauth2: DEBUG
+    org.springframework.security: INFO
+    org.springframework.security.oauth2: INFO
 #    org.springframework.boot.autoconfigure: DEBUG
+
+
+my-auth2:
+  auth2-server:
+    uri: https://forsrc-auth2-server.duckdns.org # http://localhost:8888
+  auth2-client:
+    uri: https://forsrc-auth2-client.duckdns.org #http://127.0.0.1:8080
+    clientId: auth2-client
+    redirectUri: ${my-auth2.auth2-client.uri}/login/oauth2/code/auth2-client-oidc, ${my-auth2.auth2-client.uri}/authorized
