--- a/auth2-resource-server/src/main/resources/application.yml
+++ b/auth2-resource-server/src/main/resources/application.yml
@@ -19,4 +19,5 @@ spring:
 
 my-auth2:
   auth2-server:
-    uri: https://forsrc-auth2-server.duckdns.org # http://localhost:8888
+    uri: http://localhost:8888
+    #uri: https://forsrc-auth2-server.duckdns.org # http://localhost:8888
