--- a/auth2-server/src/main/resources/application.yml
+++ b/auth2-server/src/main/resources/application.yml
@@ -1,53 +1,4 @@
 
-
-server:
-  port: 8888
-  
-  
-
-logging:
-  level:
-    root: INFO
-    org.springframework.jdbc.core.JdbcTemplate: DEBUG
-    org.springframework.web: INFO
-    org.springframework.security: INFO
-    org.springframework.security.oauth2: INFO
-    org.springframework.boot.autoconfigure: INFO
-
-
-my-auth2:
-  auth2-server:
-    uri: http://localhost:8888
-    #uri: https://forsrc-auth2-server.duckdns.org # http://localhost:8888
-  auth2-client:
-    uri: http://127.0.0.1:8080
-    #uri: https://forsrc-auth2-client.duckdns.org #http://127.0.0.1:8080
-    clientId: auth2-client
-    redirectUri: ${my-auth2.auth2-client.uri}/login/oauth2/code/auth2-client-oidc, ${my-auth2.auth2-client.uri}/authorized
-
 spring:
-  application:
-    name: forsrc-auth2-server
-  datasource:
-    url:                 ${DB_URL:jdbc:h2:./tmp/db/h2/forsrc-auth2-server.h2;AUTO_SERVER=TRUE;MODE=MYSQL;}
-    username:            ${DB_USERNAME:sa}
-    password:            ${DB_PASSWORD:sa}
-    driver-class-name:   ${DB_DRIVER:org.h2.Driver}
-  jpa:
-    database-platform:   ${DB_DIALECT:org.hibernate.dialect.H2Dialect}
-    defer-datasource-initialization: true
-    generate-ddl:        true
-    show-sql:            true
-    hibernate:
-      ddl-auto:          update
-    properties:
-      hibernate.show-sql:                  true
-      hibernate.format_sql:                true
-    open-in-view: true
-  sql:
-    init:
-      data-locations:
-      - classpath:schema.sql
-      - classpath:data.sql
-      mode: always
-      enabled: true
+  profiles:
+    active: local # duckdns
