--- a/auth2-client/src/main/resources/application.yml
+++ b/auth2-client/src/main/resources/application.yml
@@ -1,64 +1,4 @@
 
-
-server:
-  port: 8080
-  tomcat.internal-proxies: .*
-
-logging:
-  level:
-    root: INFO
-    org.springframework.web: INFO
-    org.springframework.security: INFO
-    org.springframework.security.oauth2: INFO
-#    org.springframework.boot.autoconfigure: DEBUG
-
 spring:
-  thymeleaf:
-    cache: false
-  security:
-    oauth2:
-      client:
-        registration:
-          auth2-client-oidc:
-            provider: spring
-            client-id: auth2-client
-            client-secret: secret
-            authorization-grant-type: authorization_code
-            redirect-uri: ${my-auth2.auth2-client.uri}/login/oauth2/code/{registrationId} # "http://127.0.0.1:8080/login/oauth2/code/{registrationId}"
-            scope: openid, profile
-            client-name: auth2-client-oidc
-          auth2-client-authorization-code:
-            provider: spring
-            client-id: auth2-client
-            client-secret: secret
-            authorization-grant-type: authorization_code
-            redirect-uri: ${my-auth2.auth2-client.uri}/authorized # "http://127.0.0.1:8080/authorized"
-            scope: message.read,message.write
-            client-name: auth2-client-authorization-code
-          auth2-client-client-credentials:
-            provider: spring
-            client-id: auth2-client
-            client-secret: secret
-            authorization-grant-type: client_credentials
-            scope: message.read,message.write
-            client-name: auth2-client-client-credentials
-        provider:
-          spring:
-            issuer-uri: ${my-auth2.auth2-server.uri} # http://localhost:8888
-
-
-my-auth2:
-  auth2-server:
-    uri: http://localhost:8888
-    #uri: https://forsrc-auth2-server.duckdns.org #http://localhost:8888
-  auth2-resource-server:
-    uri: http://127.0.0.1:9999 
-    #uri: https://forsrc-auth2-resource-server.duckdns.org #http://127.0.0.1:9999
-    messages: ${my-auth2.auth2-resource-server.uri}/messages
-  auth2-client:
-    uri: http://127.0.0.1:8080
-    #uri: https://forsrc-auth2-client.duckdns.org #http://127.0.0.1:8080
-    loginPage: /oauth2/authorization/auth2-client-oidc
-
-
-  
+  profiles:
+    active: local # duckdns
