--- a/auth2-client/src/main/resources/application-local.yml
+++ b/auth2-client/src/main/resources/application-local.yml
@@ -13,7 +13,7 @@ my-auth2:
     uri: http://127.0.0.1:8080
     #uri: https://forsrc-auth2-client.duckdns.org #http://127.0.0.1:8080
     loginPage: /oauth2/authorization/auth2-client-oidc
-    logoutUrl: ${my-auth2.auth2-server.uri}/oauth/logout?referer=${my-auth2.auth2-client.uri}
+    logoutUrl: ${my-auth2.auth2-server.uri}/oauth/logout?callbackUrl=${my-auth2.auth2-client.uri}
 
 
   
