--- a/auth2-client/src/main/resources/application-duckdns.yml
+++ b/auth2-client/src/main/resources/application-duckdns.yml
@@ -10,7 +10,8 @@ my-auth2:
   auth2-client:
     uri: https://forsrc-auth2-client.duckdns.org #http://127.0.0.1:8080
     loginPage: /oauth2/authorization/auth2-client-oidc
-    logoutUrl: ${my-auth2.auth2-server.uri}/oauth/logout
+    logoutUrl: ${my-auth2.auth2-server.uri}/oauth/logout?callbackUrl=${my-auth2.auth2-client.uri}
 
 
-  
+server:
+  forward-headers-strategy: framework
