--- a/auth2-resource-server/src/main/resources/application-duckdns.yml
+++ b/auth2-resource-server/src/main/resources/application-duckdns.yml
@@ -4,3 +4,6 @@
 my-auth2:
   auth2-server:
     uri: https://forsrc-auth2-server.duckdns.org # http://localhost:8888
+
+server:
+  forward-headers-strategy: framework
